Fix images being automatically stretched to max resolution; now uses normal image size

--- a/assets/main/sass/layout/_ghost.scss
+++ b/assets/main/sass/layout/_ghost.scss
@@ -195,7 +195,9 @@
 }
 
 .kg-image {
-    width: 100%;
+    //width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 figcaption {
